# AstrBot-Block-Editor

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: advanced_logic.json  api_integration.json  complex_test.json  dice_game.json  full_test.json  hello_plugin.json  new_features_test.json  scheduled_notifier.json  test_all_blocks.json  welcome_bot.json
gui/: app.py
gui/web/: blocks.js  editor.js  index.html
schemas/: blocks.json  workflow.json
src/: compile.py  requirements.txt
src/compiler/: __init__.py  analyzer.py  compiler.py  generator.py  parser.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_compiler.py  test_generator.py  test_parser.py
